--- a/Proyecto3/ReportsEquipment/Reemplazo6x4.tex
+++ b/Proyecto3/ReportsEquipment/Reemplazo6x4.tex
@@ -34,15 +34,15 @@ El objetivo es minimizar el costo promedio anual (o el valor presente de los cos
 \item \textbf{Inflación:} Los precios de adquisición y mantenimiento cambian según el año.\\
 \item \textbf{Nuevas tecnologías:} Equipos más modernos pueden ofrecer mejores rendimientos y menores costos operativos.\\
 \end{itemize}
-\textbf{Fórmula del costo:} $C_{t,j} = \text{Compra} + \sum_{k=1}^{j-t} \text{Mantenimiento}_k - \text{Venta}_{j-t}$\\
+\textbf{Fórmula del costo:} $C_{t,j} = \text{Compra} + \sum \text{Mantenimiento}_k - \sum \text{Profit}_k - \text{Venta}_{j-t}$\\
 \textbf{Algoritmo:} Programación Dinámica \\
 \textbf{Función recursiva:} $g(t) = \min\limits_{j=t+1}^{\min(t+\text{vida útil}, n)} \{C_{t,j} + g(j)\}$ con $g(n) = 0$\\
 
 \section*{Datos del Problema}
 \begin{itemize}
-\item Costo inicial (compra): \$500.00
-\item Plazo del proyecto: 5 años
-\item Vida útil del equipo: 3 años
+\item Costo inicial (compra): \$1500.00
+\item Plazo del proyecto: 4 años
+\item Vida útil del equipo: 6 años
 \end{itemize}
 
 \begin{table}[H]
@@ -52,9 +52,10 @@ El objetivo es minimizar el costo promedio anual (o el valor presente de los cos
 \toprule
 Año de Uso & Mantenimiento & Valor Residual \\
 \midrule
-1 & \$30.00 & \$400.00 \\
-2 & \$40.00 & \$300.00 \\
-3 & \$60.00 & \$250.00 \\
+1 & \$100.00 & \$1400.00 \\
+2 & \$150.00 & \$1300.00 \\
+3 & \$200.00 & \$1200.00 \\
+4 & \$250.00 & \$1100.00 \\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -77,86 +78,51 @@ Período (t-j) & Duración & Fórmula & Costo \\
 \endfoot
 \bottomrule
 \endlastfoot
-0-1 & 1 año & $500 + 30 - 400$ & \$130.00 \\
-0-2 & 2 años & $500 + 30 + 40 - 300$ & \$270.00 \\
-0-3 & 3 años & $500 + 30 + 40 + 60 - 250$ & \$380.00 \\
-1-2 & 1 año & $500 + 30 - 400$ & \$130.00 \\
-1-3 & 2 años & $500 + 30 + 40 - 300$ & \$270.00 \\
-1-4 & 3 años & $500 + 30 + 40 + 60 - 250$ & \$380.00 \\
-2-3 & 1 año & $500 + 30 - 400$ & \$130.00 \\
-2-4 & 2 años & $500 + 30 + 40 - 300$ & \$270.00 \\
-2-5 & 3 años & $500 + 30 + 40 + 60 - 250$ & \$380.00 \\
-3-4 & 1 año & $500 + 30 - 400$ & \$130.00 \\
-3-5 & 2 años & $500 + 30 + 40 - 300$ & \$270.00 \\
-4-5 & 1 año & $500 + 30 - 400$ & \$130.00 \\
+0-1 & 1 año & $1500 + 100 - 400 - 1400$ & \$-200.00 \\
+0-2 & 2 años & $1500 + 100 + 150 - 400 - 390 - 1300$ & \$-340.00 \\
+0-3 & 3 años & $1500 + 100 + 150 + 200 - 400 - 390 - 380 - 1200$ & \$-420.00 \\
+0-4 & 4 años & $1500 + 100 + 150 + 200 + 250 - 400 - 390 - 380 - 370 - 1100$ & \$-440.00 \\
+1-2 & 1 año & $1500 + 100 - 400 - 1400$ & \$-200.00 \\
+1-3 & 2 años & $1500 + 100 + 150 - 400 - 390 - 1300$ & \$-340.00 \\
+1-4 & 3 años & $1500 + 100 + 150 + 200 - 400 - 390 - 380 - 1200$ & \$-420.00 \\
+2-3 & 1 año & $1500 + 100 - 400 - 1400$ & \$-200.00 \\
+2-4 & 2 años & $1500 + 100 + 150 - 400 - 390 - 1300$ & \$-340.00 \\
+3-4 & 1 año & $1500 + 100 - 400 - 1400$ & \$-200.00 \\
 \end{longtable}
 
 \clearpage
 \section*{Cálculo de $g(t)$ (Programación Dinámica)}
 \begin{itemize}
-\item $g(5) = 0$ (caso base)
-\item $g(4) = \min\{ \mathbf{C_{4,5} + g(5) = 130.00}\} = \$130.00$ \textbf{(j=5)}
-\item $g(3) = \min\{ \mathbf{C_{3,4} + g(4) = 260.00}, C_{3,5} + g(5) = 270.00\} = \$260.00$ \textbf{(j=4)}
-\item $g(2) = \min\{ C_{2,3} + g(3) = 390.00, C_{2,4} + g(4) = 400.00, \mathbf{C_{2,5} + g(5) = 380.00}\} = \$380.00$ \textbf{(j=5)}
-\item $g(1) = \min\{ \mathbf{C_{1,2} + g(2) = 510.00}, C_{1,3} + g(3) = 530.00, \mathbf{C_{1,4} + g(4) = 510.00}\} = \$510.00$ \textbf{(Empate: j=2, j=4)}
-\item $g(0) = \min\{ \mathbf{C_{0,1} + g(1) = 640.00}, C_{0,2} + g(2) = 650.00, \mathbf{C_{0,3} + g(3) = 640.00}\} = \$640.00$ \textbf{(Empate: j=1, j=3)}
+\item $g(4) = 0$ (caso base)
+\item $g(3) = \min\{ \mathbf{C_{3,4} + g(4) = -200.00}\} = \$-200.00$ \textbf{(j=4)}
+\item $g(2) = \min\{ \mathbf{C_{2,3} + g(3) = -400.00}, C_{2,4} + g(4) = -340.00\} = \$-400.00$ \textbf{(j=3)}
+\item $g(1) = \min\{ \mathbf{C_{1,2} + g(2) = -600.00}, C_{1,3} + g(3) = -540.00, C_{1,4} + g(4) = -420.00\} = \$-600.00$ \textbf{(j=2)}
+\item $g(0) = \min\{ \mathbf{C_{0,1} + g(1) = -800.00}, C_{0,2} + g(2) = -740.00, C_{0,3} + g(3) = -620.00, C_{0,4} + g(4) = -440.00\} = \$-800.00$ \textbf{(j=1)}
 \end{itemize}
 
 \subsection*{Empates}
 Se han resaltado en \textbf{negrita} las opciones óptimas.\\
-\textbf{Empates encontrados:}
-\begin{itemize}
-\item En $g(0)$: múltiples opciones óptimas con j = 1, 3 (costo: \$640.00)
-\item En $g(1)$: múltiples opciones óptimas con j = 2, 4 (costo: \$510.00)
-\end{itemize}
-Los empates indican que existen múltiples estrategias óptimas para reemplazar el equipo.\\
+\textbf{No se encontraron empates.} Existe una única estrategia óptima para cada año de inicio.\\
 \clearpage
 \section*{Solución Óptima}
-\textbf{Costo mínimo total:} \$640.00\\
-\textbf{Planes óptimos encontrados:} 3
+\textbf{Costo mínimo total:} \$-800.00\\
+\textbf{Planes óptimos encontrados:} 1
 \subsection*{Grafos de Planes Óptimos}
 A continuación se presentan los grafos de \emph{saltos de rana} para cada plan óptimo encontrado.
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\textwidth]{REporteRe1_plan_1.png}
-\caption{Plan Óptimo 1: \texttt{0-1-2-5}}
+\includegraphics[width=0.8\textwidth]{Reemplazo6x4_plan_1.png}
+\caption{Plan Óptimo 1: \texttt{0-1-2-3-4}}
 \label{fig:plan1}
 \end{figure}
 
-\textbf{Plan 1:} \texttt{0-1-2-5}
+\textbf{Plan 1:} \texttt{0-1-2-3-4}
 \begin{itemize}\small
-\item Período 0-1: 1 año, Costo: \$130.00
-\item Período 1-2: 1 año, Costo: \$130.00
-\item Período 2-5: 3 años, Costo: \$380.00
-\end{itemize}
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.8\textwidth]{REporteRe1_plan_2.png}
-\caption{Plan Óptimo 2: \texttt{0-1-4-5}}
-\label{fig:plan2}
-\end{figure}
-
-\textbf{Plan 2:} \texttt{0-1-4-5}
-\begin{itemize}\small
-\item Período 0-1: 1 año, Costo: \$130.00
-\item Período 1-4: 3 años, Costo: \$380.00
-\item Período 4-5: 1 año, Costo: \$130.00
-\end{itemize}
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.8\textwidth]{REporteRe1_plan_3.png}
-\caption{Plan Óptimo 3: \texttt{0-3-4-5}}
-\label{fig:plan3}
-\end{figure}
-
-\textbf{Plan 3:} \texttt{0-3-4-5}
-\begin{itemize}\small
-\item Período 0-3: 3 años, Costo: \$380.00
-\item Período 3-4: 1 año, Costo: \$130.00
-\item Período 4-5: 1 año, Costo: \$130.00
+\item Período 0-1: 1 año, Costo: \$-200.00
+\item Período 1-2: 1 año, Costo: \$-200.00
+\item Período 2-3: 1 año, Costo: \$-200.00
+\item Período 3-4: 1 año, Costo: \$-200.00
 \end{itemize}
 
 \end{document}
