--- a/Proyecto3/ReportsEquipment/Reemplazo5x2.tex
+++ b/Proyecto3/ReportsEquipment/Reemplazo5x2.tex
@@ -48,13 +48,13 @@ El objetivo es minimizar el costo promedio anual (o el valor presente de los cos
 \begin{table}[H]
 \centering
 \caption{Datos del equipo por año de uso}
-\begin{tabular}{ccc}
+\begin{tabular}{cccc}
 \toprule
-Año de Uso & Mantenimiento & Valor Residual \\
+Año de Uso & Mantenimiento & Valor Residual & Beneficio \\
 \midrule
-1 & \$60.00 & \$975.00 \\
-2 & \$70.00 & \$860.00 \\
-3 & \$80.00 & \$750.00 \\
+1 & \$60.00 & \$975.00 & \$100.00 \\
+2 & \$70.00 & \$860.00 & \$90.00 \\
+3 & \$80.00 & \$750.00 & \$80.00 \\
 \bottomrule
 \end{tabular}
 \end{table}
